<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="red.padraig.twotapp.ui.activities.MainActivity">


    <RelativeLayout android:id="@+id/linearlayout_main_countdowncontainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerInParent="true">

        <LinearLayout
            android:id="@+id/linearlayout_main_setcountdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <NumberPicker
                android:id="@+id/numberpicker_main_hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/main_hourlabel"
                android:textSize="25sp" />

            <NumberPicker
                android:id="@+id/numberpicker_main_minutes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/main_minutelabel"
                android:textColor="@color/color_main_timeLabel"
                android:textSize="@dimen/main_timeLabelSize" />

            <NumberPicker
                android:id="@+id/numberpicker_main_seconds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/main_secondlabel"
                android:textColor="@color/color_main_timeLabel"
                android:textSize="25sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textview_main_displaycountdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:textSize="30sp"
            android:layout_centerInParent="true"
            android:text="0h 00m 00s 000"/>
    </RelativeLayout>




    <LinearLayout
        android:id="@+id/linearlayout_main_controlbuttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearlayout_main_countdowncontainer"
        android:layout_centerHorizontal="true">

        <ImageButton
            android:id="@+id/button_main_starttimer"
            android:layout_width="@dimen/main_controlbuttonsize"
            android:layout_height="@dimen/main_controlbuttonsize"
            android:background="@drawable/ic_play"
            android:contentDescription="@string/main_playbuttondescription" />

        <ImageButton
            android:id="@+id/button_main_pausetimer"
            android:layout_width="@dimen/main_controlbuttonsize"
            android:layout_height="@dimen/main_controlbuttonsize"
            android:background="@drawable/ic_pause"
            android:contentDescription="@string/main_pausebuttondescription"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/button_main_resumetimer"
            android:layout_width="@dimen/main_controlbuttonsize"
            android:layout_height="@dimen/main_controlbuttonsize"
            android:background="@drawable/ic_play"
            android:contentDescription="@string/main_resumebuttondescription"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/button_main_resettimer"
            android:layout_width="@dimen/main_controlbuttonsize"
            android:layout_height="@dimen/main_controlbuttonsize"
            android:background="@drawable/ic_stop"
            android:contentDescription="@string/main_resettimerdescription"
            android:visibility="invisible" />
    </LinearLayout>

</RelativeLayout>
